# RNA_lexis

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  llms.txt  pyproject.toml
docs/: build_docs.py  user_guide.html  user_guide.md
src/rna_lexis/: RNAlang.py  __init__.py  __main__.py  algorithms.py  alignment.py  dialogs.py  io.py  menu.py  plots.py  statistical.py  test_cli.py
src/rna_lexis/data/: NORAD_human.fasta  NORAD_mouse.fasta  README.md
tests/: test_algorithms.py  test_alignment.py  test_batch_cli.py  test_io.py  test_norad_integration.py  test_plots.py  test_statistical.py
