[build-system]
requires = ["setuptools >= 77.0.3, <81.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "RNA_lexis"
version = "0.0.3"
authors = [
  { name="Haim Bar", email="haim.bar@uconn.edu" },
]
description = "A python package to explore RNA data"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

dependencies = ["matplotlib>=3.5.0", "numpy",
	"datetime",	"networkx",	"matplotlib", "plotly>=5,<6", "pandas",
	"weblogo", "scipy", "Levenshtein",
	"kaleido<1", "markdown", "platformdirs"]

[project.scripts]
rna_lexis = "rna_lexis.menu:main"
