[build-system]
requires = ["setuptools >= 77.0.3, <81.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "RNA_lexis"
version = "0.2.2"
authors = [
  { name="Haim Bar", email="haim.bar@uconn.edu" },
]
description = "A python package to explore RNA data"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

dependencies = ["matplotlib>=3.5.0", "numpy",
	"plotly>=5", "pandas",
	"weblogo", "scipy",
	"kaleido>=0.2,<1", "markdown", "platformdirs",
	"pywin32; sys_platform == 'win32'"]

[project.scripts]
rna_lexis = "rna_lexis.menu:main"
rna_lexis_stat = "rna_lexis.menu:main"
rna_lexis_stat_cli = "rna_lexis.test_cli:main"

[tool.setuptools.package-data]
rna_lexis = ["data/*.fasta", "data/README.md"]
